--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <header>
     
-    <h1>Estudiante: Josue Atanacio </h1>
+    <h1>Estudiante: Josue Atanacio xD </h1>
     <img src="imagenes/jos.jpg" alt="My Profile Picture">
   </header> 
   <main>
