--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     
     <h1>Estudiante: Josue Atanacio xD </h1>
-    <img src="imagenes/profile.png" >
+    <img src="imagenes/josu.png" alt="My josu Picture">
   </header> 
   <main>
     
