--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     
     <h1>Estudiante: Josue Atanacio xD </h1>
-    <img src="imagenes/josu.png" alt="My Josu image">
+    <img src="imagenes\Josu.png" alt="My Josu image">
   </header> 
   <main>
     
