--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
       <li> Practica 1:<a href="#">Servidor Web </a></li> 
-      <li>Practica 2:<a href="#">HTML</a></li>
+      <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>
       
     </ul>
     
