--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
-      <li> Practica 1:<a href="Josue Atanacio Choque.pdf">Servidor Web </a></li> 
+      <li> Practica 1:<a href="css/Practica 1- Josue Atanacio Choque.pdf">Servidor Web </a></li> 
       <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>
       
     </ul>
