--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul>
       <li> Practica 1:<a href="css/Practica 1- Josue Atanacio Choque.pdf">Servidor Web </a></li> 
       <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>
+      <li>Estructura De Proyecto:<a href="estruct.html">Estructura De Proyecto</a></li>
       
     </ul>
     
