--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li> Practica 1:<a href="css/Practica 1- Josue Atanacio Choque.pdf">Servidor Web </a></li> 
       <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>
       <li>Estructura De Proyecto:<a href="estruct.html">Estructura De Proyecto</a></li>
+      <li>Practicas 4:<a href="cdcd.html">fizzbuzz</a></li>
       
     </ul>
     
