--- a/estruct.html
+++ b/estruct.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css\estructcss.css">
+  <link rel="stylesheet" href="css\proyectocsm.css">
 </head>
 <body  >
   <div class="contenedor">
     <header>
-      <h1><center>Servidore DNS</center></h1>
+      <h1><center>Servidores DNS</center></h1>
         <nav>
             <a href="#" style="color:rgb(155, 111, 111);">Informacion</a>
             <a href="#" style="color:rgb(155, 111, 111);">Beneficios</a>
@@ -78,8 +78,9 @@
                     </ul>
               </section>
             </aside>
-
+            <video src="imagenes\coca.mp4" loop autoplay muted width="50%"></video><img src = "imagenes\open.jpg" width="50%">
             <footer>
+                
                 <p>Esta pagina es una explicacion detallada de Servideres Dns</p>
                 <div class="redes">
                   <h2>Sigenos en: </h2>
@@ -94,5 +95,6 @@
                   </div>
             </footer>
 </div>
+
 </body>
 </html>
