--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
       <li> Practica 1:<a href="css/Practica 1- Josue Atanacio Choque.pdf">Servidor Web </a></li> 
-      <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>
-      <li>Estructura De Proyecto:<a href="estruct.html">Estructura De Proyecto</a></li>
+      <li>Practicas 2:<a href="ejemplos.html">Layout CSS</a></li>     
       <li>Practicas 4:<a href="cdcd.html">fizzbuzz</a></li>
-      
+      <li>Proyecto fase 1:<a href="imagenes\structdx.html">Estructura De Proyecto</a></li>
+      <li>Proyecto fase 2:<a href="estruct.html">Proyecto con Css</a></li>
+      <li>Proyecto fase digivolucionada final:<a href="estruct.html">Proyecto Final Terminado</a></li>
     </ul>
     
   </main> 
