--- a/estruct.html
+++ b/estruct.html
@@ -71,10 +71,10 @@
                       <ul class="enlaces">
                       <li><img href="#"  src="imagenes\opendns.jpg" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">OpenDNS.</a></li>
                       <li><img href="#"  src="imagenes\floud.png" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Cloudflare.</a></li>
-                      <li><img href="# "  src="#" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">DNS público de Google.</a></li>
-                      <li><img href="# "  src="#" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Comodo Secure DNS. </a></li>
-                      <li><img href="# "  src="#" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Quad9. </a></li>
-                      <li><img href="# "  src="#" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Verisign DNS. </a></li>
+                      <li><img href="# "  src="imagenes\dnsgoogle.jpg" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">DNS público de Google.</a></li>
+                      <li><img href="# "  src="imagenes\comododns.png" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Comodo Secure DNS. </a></li>
+                      <li><img href="# "  src="imagenes\quad9dns.jpg" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Quad9. </a></li>
+                      <li><img href="# "  src="imagenes\verisigndns.png" width="50" height="50"><a href="#" style="color:rgb(155, 111, 111);">Verisign DNS. </a></li>
                     </ul>
               </section>
             </aside>        
