--- a/cdcd.html
+++ b/cdcd.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="fizz.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <h1>Fizz Buzz</h1>
+    <script>
+     let i=1;
+    for(  i=1;i<=100;i++){
+        if (i%3==0 && i%5==0){
+            document.write(i+".-"+"FIZZBUZZ"+'<br>');
+        }else{
+        if (i%3==0){
+            document.write(i+".-"+"FIZZ"+'<br>');
+        }else{
+        if (i%5==0){
+            document.write(i+".-"+"BUZZ"+'<br>');
+        }
+        else{
+            document.write(i + "<br>");
+             }
+            }
+        }
+    }
+    </script>
     
 </body>
 </html>
