--- a/javascriptjos.html
+++ b/javascriptjos.html
@@ -91,7 +91,7 @@
     <h4 class="ttl">Ejercicio 4</h4>
     
        <labe>La Fecha Actual Es:</labe><input id="resultad" type="text" readonly=""><br>  
-       <input type="button" class="btnn" onclick="fechaactual()" value="Calcular">
+       <input type="button" class="btnn" onclick="fechaactual()" value="Mostrar Fecha Actual">
       <script>
       
 
