--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Practicas 3:<a href="javascriptjos.html">JavaScript</a></li>
       <li>Proyecto fase 1:<a href="imagenes\structdx.html">Estructura De Proyecto</a></li>
       <li>Proyecto fase 2:<a href="estruct.html">Proyecto con Css</a></li>
-      <li>Proyecto fase digivolucionada final:<a href="estruct.html">Proyecto Final Terminado</a></li>
+      <li>Proyecto fase digivolucionada final:<a href="proyectofinal.html">Proyecto Final Terminado</a></li>
     </ul>
     
   </main> 
