--- a/ejemplomenu.html
+++ b/ejemplomenu.html
@@ -7,22 +7,21 @@
   <link rel="stylesheet" href="ejemplomenu.css">
 </head>
 <body  >
-   
-  <div class="contenedor">
+
     <header>
-       <nav>
-            <ul class="menudx">
-                <li><a href="#" onclick="MenuDesplegable()">&#9776;Menu</a></li>
-                <li><a href="#">Informacion</a></li>
-                <li><a href="#">Beneficios</a></li>
-                <li><a href="#">paquetes DNS</a></li>
-                <li><a href="#">Paquetes empresariales</a></li>
-            </ul>
-        </nav>
-        
-    </header>
-         
-</div> 
-<script src="imagenes\menudx.js"></script>
+       <input type="checkbox" id="btn-menu">
+       <label for="btn-menu"> <img src="imagenes\menuss.png" width="30px" height="30px" alt=""> </label>
+   
+     <nav class="menu">
+       <ul>
+      <li><a href="#" >Informacion</a></li>
+      <li><a href="#" >Beneficios</a></li>
+      <li><a href="#" >Paquetes DNS</a></li>
+      <li><a href="#">Bibliografia</a> </li> 
+      <li><img  class="imgmenu "href="#" src="imagenes\dnsmenu.png" width="75" height="75px"> </li>
+     </ul>         
+  </nav> 
+
+ </header>
 </body>
 </html>
