--- a/proyectofinal.html
+++ b/proyectofinal.html
@@ -15,9 +15,9 @@
       <nav class="menu">
         <ul>
        <li><a href="index.html" >Incio Portal</a></li>
-       <li><a href="#" >Beneficios</a></li>
-       <li><a href="#" >Paquetes DNS</a></li>
-       <li><a href="#">Bibliografia</a> </li> 
+       <li><a href="dnspopus.html" >DNS Mas Populares</a></li>
+       <li><a href="sugerencias.html" >Sugerencias</a></li>
+       <li><a href="bibliografias.html">Bibliografia</a> </li> 
       
       </ul>         
    </nav> 
