--- a/bibliografias.html
+++ b/bibliografias.html
@@ -4,12 +4,52 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css\proyectofinals.css">
+  <link rel="stylesheet" href="css\bibliografiass.css">
 </head>
 <body>
-    <header>    
+  <header>    
+    <input type="checkbox" id="btn-menu">
+    <label for="btn-menu"> <img src="imagenes\menuss.png" width="30px" height="30px" alt=""> </label>
 
-    </header>
+  <nav class="menu">
+    <ul>
+  <li><a href="proyectofinal.html" >Incio</a></li>
+   <li><a href="index.html" >Incio Portal</a></li>
+   <li><a href="dnspopus.html" >DNS Mas Populares</a></li>
+   <li><a href="sugerencias.html" >Sugerencias</a></li>
+   <li><a href="bibliografias.html">Bibliografia</a> </li> 
+  
+  </ul>         
+</nav> 
+</header>
+<nav class="popupag">
+  <h1>WEB GRAFIA</h1>
+<div class="flex-container">
+  <div><h1>INFORMACION OBTENIDA DE PAGINAS:</h1><BR >https://www2.uned.es/csi/reduned/dns/<BR><HR color="black">https://cloud.google.com/dns?utm_source=google&utm_medium=cpc&utm_campaign=latam-LATAM-all-es-dr-SKWS-all-all-trial-p-dr-1011454-LUAC0016086&utm_content=text-ad-none-any-DEV_c-CRE_541348708936-ADGP_Hybrid%20%7C%20SKWS%20-%20PHR%20%7C%20Txt%20~%20Networking_DNS-KWID_43700066069612064-kwd-301290121666&utm_term=KW_dominio-ST_Dominio&gclid=Cj0KCQiA95aRBhCsARIsAC2xvfybmMVrm9HNULfJUa5-yLhoOZ2zzwzG8My40jLiAgZGXPIDlhcEzE4aAr7XEALw_wcB&gclsrc=aw.ds
+    <BR><HR color="black">https://www.xataka.com/ordenadores/como-usar-los-dns-de-google-y-que-ventajas-tienen<BR><HR color="black">https://www.xataka.com/basics/servidores-dns-libres-gratuitos-que-que-riesgos-tienen-principales-alternativas#:~:text=Comodo%20Secure%20DNS%3A%208.26.56.26,incluso%20dominios%20con%20demasiada%20publicidad.
+      <BR><HR color="black">https://www.youtube.com/watch?v=sUhEqT_HSBI&t=94s&ab_channel=ProfeSang <BR><HR color="black">
+        https://www.youtube.com/watch?v=LqSqrtxrW7w&ab_channel=DefectoDigital
+        </div>
+ 
+</div>
+<HR color="WHITE">
+<div class="flex-container">
+  <div><h1>LINKS DE REFERENCIAS USADAS</h1><BR>https://www.facebook.com/<BR><HR color="black">https://www.instagram.com/?hl=es-la
+    <BR><HR color="black">https://twitter.com/?lang=es
+      <BR><HR color="black">https://www.whatsapp.com/?lang=es
+        <BR><HR color="black">https://www.coca-coladebolivia.com.bo
+          <BR><HR color="black">https://www.openenglish.com/
+            <BR><HR color="black">https://www.opendns.com/
+              <BR><HR color="black">https://www.cloudflare.com/
+                <BR><HR color="black">https://cloud.google.com/
+                  <BR><HR color="black">https://www.comodo.com/secure-dns/
+                    <BR><HR color="black">https://www.quad9.net/es/
+                      <BR><HR color="black">https://www.verisign.com/
+                        
+            </div>
+ 
+</div>
+</nav>
     <nav class="navfoo">
       
         <a href="https://www.coca-coladebolivia.com.bo"><video class="videopu" src="imagenes\coca.mp4" loop autoplay muted ></video></a><a href="https://www.openenglish.com/"><img  class="imagenpu" src = "imagenes\open.jpg" ></a>
