--- a/dnspopus.html
+++ b/dnspopus.html
@@ -4,12 +4,58 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css\proyectofinals.css">
+  <link rel="stylesheet" href="css\dnspopuss.css">
 </head>
 <body>
-    <header>    
+  <header>    
+    <input type="checkbox" id="btn-menu">
+    <label for="btn-menu"> <img src="imagenes\menuss.png" width="30px" height="30px" alt=""> </label>
 
-    </header>
+  <nav class="menu">
+    <ul>
+  <li><a href="proyectofinal.html" >Incio</a></li>
+   <li><a href="index.html" >Incio Portal</a></li>
+   <li><a href="dnspopus.html" >DNS Mas Populares</a></li>
+   <li><a href="sugerencias.html" >Sugerencias</a></li>
+   <li><a href="bibliografias.html">Bibliografia</a> </li> 
+  
+  </ul>         
+</nav> 
+</header>
+<nav class="popupag">
+<h1>Paginas Mas Populares</h1>
+
+<div class="flex-container">
+  <div><h1>OPEN DNS</h1><img src="imagenes\opendnspopu.png"width="700" height="400" ><BR>OpenDNS: 208.67.222.222 y 208.67.220.220. Fundado en 2005 y propiedad actual de Cisco, OpenDNS es uno de los DNS públicos más grandes e importantes de la red. Su servicio es de pago, pero tiene una versión gratis con gran velocidad, siempre disponible, con webs de phishing bloqueadas por defecto y la posibilidad de establecer un control parental.</div>
+ 
+</div>
+<BR>
+<div class="flex-container">
+  <div><h1>CLOUDFARE</h1><img src="imagenes\cloudpopu.png"width="700" height="400" ><BR>Cloudflare: 1.1.1.1 y 1.0.0.1. El de Cloudflare es un servicio que no tiene demasiados extras ni opciones adicionales, pero que se centra sobre todo en el rendimiento, la velocidad de su servicio y sobre todo en la privacidad, prometiendo que no utilizará tus datos para servir publicidad y que nunca escribirá en ningún disco duro tu IP.</div>
+ 
+</div>
+<BR>
+<div class="flex-container">
+  <div><h1>GOOGLE PUBLIC DNS</h1><img src="imagenes\googlepopu.png" width="700" height="400"><BR>Google Public DNS: 8.8.8.8 y 8.8.4.4. El servicio DNS de Google está centrado en los usuarios más inexpertos, y ofrece todas las explicaciones en su documentación online. No es tan privado como el de Cloudflare, ya que guarda datos anonimizados de navegación, pero por lo menos promete borrar tu IP a las 24 o 48 horas de sus servidores.</div>
+ 
+</div>
+<BR>
+<div class="flex-container">
+  <div><h1>NORTON DNS</h1><img src="imagenes\nortonPOPU.jpg" width="700" height="400"><BR>Norton ConnectSafe: 199.85.126.10 y 199.85.127.10. El de Norton es un servicio DNS gratuito que bloquea automáticamente las páginas fraudulentas, el phishing y las webs de malware, añadiendo otros filtros más para bloquear páginas. Sus datos de seguridad provienen del propio Norton, lo que representa una ventaja. La desventaja en cambio es el proceso de configuración en el que hay que elegir el nivel de protección, y que puede ser un poco complicado para no iniciados.</div>
+ 
+</div>
+<BR>
+<div class="flex-container">
+  <div><h1>COMODO SECURE DNS</h1><img src="imagenes\ComodoPOPU.jpg"  width="700" height="400"><BR>Comodo Secure DNS: 8.26.56.26 y 8.20.247.20. La empresa Comodo está especializada en productos de seguridad, y también ofrece un DNS gratuito centrado en bloquear páginas peligrosas, spyware o incluso dominios con demasiada publicidad.</div>
+ 
+</div>
+<BR>
+<div class="flex-container">
+  <div><h1>QUAD9</h1><img src="imagenes\quad9dns.jpg" width="700" height="400"><BR>Quad9: 9.9.9.9 y 149.112.112.112. Un servicio menos veterano al llevar en marcha sólo desde 2016, pero que se centra en su capacidad de bloquear dominios maliciosos, a los cuales identifica recolectando "inteligencia" desde varias fuentes públicas y privadas. Aunque esto puede levantar dudas, ya que no habla de qué fuentes son, lo que sí está claro es que también ofrece un gran rendimiento y velocidad.</div>
+ 
+</div>
+<BR>
+</nav>
     <nav class="navfoo">
       
         <a href="https://www.coca-coladebolivia.com.bo"><video class="videopu" src="imagenes\coca.mp4" loop autoplay muted ></video></a><a href="https://www.openenglish.com/"><img  class="imagenpu" src = "imagenes\open.jpg" ></a>
