--- a/proyectofinal.html
+++ b/proyectofinal.html
@@ -14,6 +14,7 @@
     
       <nav class="menu">
         <ul>
+      <li><a href="proyectofinal.html" >Incio</a></li>
        <li><a href="index.html" >Incio Portal</a></li>
        <li><a href="dnspopus.html" >DNS Mas Populares</a></li>
        <li><a href="sugerencias.html" >Sugerencias</a></li>
