--- a/sugerencias.html
+++ b/sugerencias.html
@@ -4,12 +4,31 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css\proyectofinals.css">
+  <link rel="stylesheet" href="css\sugerenciass.css">
 </head>
 <body>
-    <header>    
+  <header>    
+    <input type="checkbox" id="btn-menu">
+    <label for="btn-menu"> <img src="imagenes\menuss.png" width="30px" height="30px" alt=""> </label>
 
-    </header>
+  <nav class="menu">
+    <ul>
+  <li><a href="proyectofinal.html" >Incio</a></li>
+   <li><a href="index.html" >Incio Portal</a></li>
+   <li><a href="dnspopus.html" >DNS Mas Populares</a></li>
+   <li><a href="sugerencias.html" >Sugerencias</a></li>
+   <li><a href="bibliografias.html">Bibliografia</a> </li> 
+  
+  </ul>         
+</nav> 
+</header>
+<nav class="popupag">
+  <h1>Paginas Mas Populares</h1>
+  
+  <div class="flex-container">
+    <div><h1>OPEN DNS</h1><BR>OpenDNS: </div>
+   
+  </div>
     <nav class="navfoo">
       
         <a href="https://www.coca-coladebolivia.com.bo"><video class="videopu" src="imagenes\coca.mp4" loop autoplay muted ></video></a><a href="https://www.openenglish.com/"><img  class="imagenpu" src = "imagenes\open.jpg" ></a>
