--- a/javascriptjos.html
+++ b/javascriptjos.html
@@ -100,7 +100,7 @@
            var month = fecha.getUTCMonth()+1;
            var day = fecha.getUTCDate();
            var year = fecha.getUTCFullYear();
-           document.getElementById('resultad').value=(day+"/"+month+"/"+year);    
+           document.getElementById('resultad').value=("Entregado:"+day+"/"+month+"/"+year);    
           }   
       </script>
   </div> 
