--- a/proyectofinal.html
+++ b/proyectofinal.html
@@ -84,7 +84,7 @@
       </div>  
       <nav class="navfoo">
       
-        <a href="https://www.coca-coladebolivia.com.bo"><video class="videopu" src="imagenes\coca.mp4" loop autoplay muted ></video></a><a href="https://www.openenglish.com/"><img  class="imagenpu" src = "imagenes\open.jpg" alt="" ></a>
+        <a href="https://www.coca-coladebolivia.com.bo"><video class="videopu" src="imagenes\coca.mp4" loop autoplay muted alt=""></video></a><a href="https://www.openenglish.com/"><img  class="imagenpu" src = "imagenes\open.jpg" alt="" ></a>
     
     </nav>     
             <footer>
